# actix-security

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
0.2/: print.html  searchindex.js  searchindex.json
0.2/advanced/: architecture.html  testing.html
0.2/api/: crates.js  help.html  settings.html
0.2/api/actix_security/: all.html  attr.has_role.html  attr.roles_allowed.html  attr.secured.html  index.html
0.2/api/actix_security_codegen/: attr.authenticated.html  attr.has_access.html  attr.has_role.html  attr.permit_all.html  attr.pre_authorize.html  attr.roles_allowed.html  attr.secured.html
0.2/api/actix_security_core/: index.html
0.2/api/actix_security_examples/: all.html  index.html  sidebar-items.js  struct.TestUsers.html
0.2/api/actix_security_test/: all.html  fn.authorizer.html  fn.print_startup_info.html  index.html  sidebar-items.js
0.2/api/api_key_auth/: fn.authorizer.html  fn.get_repository.html  fn.main.html  index.html  (+2 more)
0.2/authentication/: custom.html  index.html  jwt.html  oauth2.html  session-auth.html
0.2/authorization/: custom.html  method-security.html  roles-authorities.html  url-based.html
0.2/expressions/: custom.html
0.2/features/: account-locking.html  api-key.html  audit-logging.html  channel-security.html  csrf-protection.html  ldap.html  rate-limiting.html  remember-me.html  saml.html  security-headers.html
0.2/getting-started/: installation.html  quick-start.html
0.2/macros/: index.html  permit-all.html
0.2/reference/: api.html  migration.html  spring-comparison.html
0.2/theme/: version-selector.js
actix-security/: Cargo.toml
actix-security/src/: lib.rs
codegen/: Cargo.toml
codegen/src/: access.rs  helpers.rs  legacy.rs  lib.rs  pre_authorize.rs  secured.rs  simple.rs
core/: Cargo.toml
core/src/http/: mod.rs
core/src/http/auth/: access.rs  auth_manager.rs  mod.rs  user.rs
core/src/http/error/: auth_error.rs  mod.rs
core/src/http/middleware/: http_security.rs  mod.rs  security_service.rs  security_transform.rs
core/src/http/security/: account.rs  ant_matcher.rs  audit.rs  authenticator.rs  authorization.rs  authorize_requests.rs  authorizer.rs  channel.rs  config.rs  context.rs  crypto.rs  csrf.rs  extractor.rs  form_login.rs  headers.rs  http_basic.rs  http_security.rs  jwt.rs  ldap.rs  manager.rs  middleware.rs  mod.rs  oauth2.rs  rate_limit.rs  remember_me.rs  saml.rs  session.rs  user.rs  user_details.rs  web.rs
core/src/http/security/api_key/: authenticator.rs  config.rs  error.rs  key.rs  mod.rs  repository.rs
core/src/http/security/expression/: ast.rs  evaluator.rs  mod.rs  parser.rs  root.rs  tests.rs
core/src/http/security/websocket/: config.rs  error.rs  extractor.rs  mod.rs  origin.rs
core/web/: login.html
docs/: ARCHITECTURE.md  ROADMAP.md  book.toml
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-aedaa19a.js  toc-739289de.js  toc.html
docs/src/: 404.md  SUMMARY.md  introduction.md
examples/: Cargo.toml  README.md
examples/src/: lib.rs
examples/src/api_key_auth/: README.md  main.rs
examples/src/audit_logging/: README.md  main.rs
examples/src/basic_auth/: README.md  main.rs
examples/src/custom_expressions/: README.md  main.rs
examples/src/form_login/: README.md  main.rs
examples/src/jwt_auth/: README.md  main.rs
examples/src/ldap_auth/: README.md  main.rs
examples/src/oauth2_google/: README.md  main.rs
examples/src/oidc_keycloak/: README.md  main.rs
examples/src/saml_auth/: README.md  main.rs
examples/src/security_complete/: README.md  main.rs
examples/src/security_headers/: README.md  main.rs
examples/src/session_auth/: README.md  main.rs
examples/src/websocket_auth/: README.md  main.rs
examples/tests/: account_lock_tests.rs  api_key_tests.rs  audit_tests.rs  basic_auth_tests.rs  csrf_tests.rs  form_login_tests.rs  jwt_auth_tests.rs  oauth2_tests.rs  rate_limit_tests.rs  remember_me_tests.rs  security_headers_tests.rs  session_auth_tests.rs  websocket_tests.rs
latest/: 404.html  index.html  print.html  searchindex.js  searchindex.json
latest/advanced/: architecture.html  extending.html
latest/api/: crates.js  help.html  index.html  settings.html  src-files.js
latest/authentication/: http-basic.html  index.html  memory.html  oauth2.html  password-encoding.html  session-auth.html
latest/authorization/: custom.html  index.html
latest/expressions/: builtin.html  custom.html  index.html
latest/features/: audit-logging.html  csrf-protection.html  ldap.html  remember-me.html  saml.html  security-context.html  websocket.html
latest/getting-started/: first-app.html  installation.html
latest/macros/: deny-all.html  index.html  permit-all.html  pre-authorize.html  roles-allowed.html  secured.html
latest/reference/: api.html  migration.html
next/: 404.html  introduction.html  print.html  searchindex.js  searchindex.json
next/advanced/: testing.html
next/api/: crates.js  help.html  settings.html  src-files.js
next/authentication/: custom.html  http-basic.html  jwt.html  password-encoding.html
next/authorization/: index.html  roles-authorities.html  url-based.html
next/features/: account-locking.html  api-key.html  audit-logging.html  channel-security.html  ldap.html  rate-limiting.html  saml.html  security-headers.html  websocket.html
next/getting-started/: first-app.html  quick-start.html
next/macros/: deny-all.html  pre-authorize.html  roles-allowed.html  secured.html
next/reference/: spring-comparison.html
next/theme/: pagetoc.css  version-selector.js
test/: Cargo.toml
test/src/: main.rs
test/src/handlers/: admin.rs  api.rs  home.rs  mod.rs  pre_authorize.rs  public.rs  secured.rs
test/tests/: basic_auth_tests.rs  custom_expression_tests.rs  expression_tests.rs  middleware_tests.rs  password_encoder_tests.rs  pre_authorize_macro_tests.rs  rust_syntax_tests.rs  secured_macro_tests.rs  security_headers_tests.rs  simple_macro_tests.rs
test/tests/common/: mod.rs
(+3670 files in other folders)
