[package]
name = "actix-security-codegen"
version = "0.1.0"
authors = ["tahar.bounsiar <tahar.bounsiar@engie.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_security_codegen"
proc-macro = true

[dependencies]
actix-security-core = { version = "0.1.0", path = "../core" }

syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
