[package]
name = "actix-security-core"
version = "0.1.0"
authors = ["tahar.bounsiar <tahar.bounsiar@engie.com>"]
edition = "2018"

[lib]
name = "actix_security_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
futures = "0.3.9"
actix-web = "3"
actix-service = "1.0.6"
actix-session = "0.4.0"
rand = "0.8.1"

derive_more = "0.99.11"