[package]
name = "actix-security-test"
version = "0.1.0"
authors = ["tahar.bounsiar <tahar.bounsiar@engie.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-security-core = { path = "../core" }
rand = "0.8.1"
serde = "1.0"
lazy_static = "1.4.0"