[package]
name = "actix-security-test"
version = "0.2.1"
authors = ["tahar.bounsiar <tahar.bounsiar@engie.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-security-core = { path = "../core" }
actix-security-codegen = { path = "../codegen" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1"

[dev-dependencies]
actix-http = "3"
base64 = "0.22"
